# ecf-agent

./: .env.example  .gitignore  README.md  build.py  build.spec  install-binary.sh  install-source.sh  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
config/: config-sqlite.yaml  config.example.yaml
scripts/: install_linux.sh  install_windows.ps1  setup_test_db.py
src/: __init__.py  config.py  main.py  updater.py
src/database/: __init__.py  connector.py
src/queue/: __init__.py  retry_queue.py
src/scheduler/: __init__.py  job_manager.py
src/sender/: __init__.py  api_client.py  compressor.py
tests/: test_compressor.py  test_config.py
